--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,11 @@ services:
             port: 3306
             user: root
             password: prisma
+    healthcheck:
+      test: wget --quiet --tries=1 --spider http://localhost:4466
     depends_on:
-      - mysql
+      mysql:
+        condition: service_healthy
   mysql:
     image: mysql:5.7
     restart: always
@@ -24,6 +27,8 @@ services:
       MYSQL_ROOT_PASSWORD: prisma
     volumes:
       - mysql:/var/lib/mysql
+    healthcheck:
+      test: mysqladmin ping -h 127.0.0.1 -pprisma
   api:
     build:
       context: .
@@ -36,6 +41,7 @@ services:
       - NODE_ENV=development
       - PRISMA_END_POINT=http://prisma:4466
     depends_on:
-      - prisma
+      prisma:
+        condition: service_healthy
 volumes:
   mysql: ~
